Bug 1938570 - Update libcubeb to 6043d35a. r=cubeb-reviewers,padenot

Differential Revision: https://phabricator.services.mozilla.com/D233659